--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script src="/main.bundle.js"></script>
+    <canvas id="canvas"></canvas>
 </body>
 </html>
