--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,13 @@
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script id="vertex-shader" type="x-shader/x-vertex" src="./shaders/vertex.glsl">
+    </script>
+    
+    <script id="fragment-shader" type="x-shader/x-fragment" src="./shaders/frag.glsl">
+    </script>
     <script src="/main.bundle.js"></script>
     <canvas id="canvas"></canvas>
 </body>
