constrainet cam moveement

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
 <html>
+
 <head>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <script id="vertex-shader" type="x-shader/x-vertex" src="./shaders/vertex.glsl">
     </script>
-    
+
     <script id="fragment-shader" type="x-shader/x-fragment" src="./shaders/frag.glsl">
     </script>
     <script src="/main.bundle.js"></script>
     <canvas id="canvas"></canvas>
+    <div class="header-btn">
+        Shop
+    </div>
+
+    <div class="header">
+
+        Connected Wallet: 0x0
+    </div>
 </body>
+
 </html>
