--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,18 @@
     </script>
     <script src="/main.bundle.js"></script>
     <canvas id="canvas"></canvas>
-    <div class="header-btn">
-        Shop
-    </div>
 
+   
     <div class="header">
-
-        Connected Wallet: 0x0
+        <div class="header-btn">
+            Auction
+        </div>
+        <div class="header-btn">
+            Community
+        </div>
+    </div>
+    <div class="wallet">
+        Connected Wallet: 0x000F
     </div>
 </body>
 
