--- a/src/auction.html
+++ b/src/auction.html
@@ -11,12 +11,11 @@
     <script id="fragment-shader" type="x-shader/x-fragment" src="./shaders/frag.glsl">
     </script>
     <script src="/main.bundle.js"></script>
-    <canvas id="canvas"></canvas>
 
    
     <div class="header">
-        <a href="auction.html" class="header-btn">
-            Auction
+        <a href="index.html" class="header-btn">
+            Play
         </a>
         <a class="header-btn">
             Community
