sync me breaking everything again

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <script src="/main.bundle.js"></script>
     <canvas id="canvas"></canvas>
 
-   
+<!--    
     <div class="header">
         <a href="auction.html" class="header-btn">
             Auction
@@ -24,7 +24,7 @@
     </div>
     <div class="wallet">
         Connected Wallet: 0x000F
-    </div>
+    </div> -->
 </body>
 
 </html>
