--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             Auction
         </a>
         <a class="header-btn">
-            Community
+            Community ▼
         </a>
     </div>
     <div class="wallet">
