--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
    
     <div class="header">
         <a href="auction.html" class="header-btn">
-            Auction
+            Cards ▼
         </a>
         <a class="header-btn">
             Community ▼
